2014-01-16  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Added in simple HTTP response for HW 1.

2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.
 * Added a return for an HTTP 1.0 response
 * Added a return for a 'Content-type' of text/html
 * Added html templates inherited from a base.html
 * Refactored for wsgi

 * HW 8
 * Added command line support
 * Added twill testing
 * Added support for .jpg and .tiff for Project
 * Modified root directory to accept .tiff and .jpeg