@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <met a http-equiv="Content-Type" content="text/html">
+        <script src='jquery'></script>
+
+        <meta http-equiv="Content-Type" content="text/html">
     </head>
     <body>
 {% block content %}
