@@ -4,5 +4,12 @@
 <a href='upload'>Upload an image</a> |
 <a href='image'>Show most recent image</a>
 <p>
-<img width=40% src='image_raw?special_latest'/>
+<h2>Version 2</h2>
+<a href='upload2'>Upload an image</a> |
+<a href='image'>Show most recent image</a>
+
+<p>
+<a href='image_list'>All images</a>
+<hr>
+<img width=40% src='image_raw'/>
 {% endblock %}
