@@ -6,38 +6,44 @@ import StringIO
 import sys
 import quixote
 import imageapp
+import time
+import os
+import quixote
+import quixote.demo.altdemo
+import app
+import quotes
+import chat
 
+from StringIO import StringIO
 from app import make_app
 from quixote.demo import create_publisher
 
 def main():
-    s = socket.socket()    # Creating a socket object
-    host = socket.getfqdn() # Get local machine name
+    parser = argparse.ArgumentParser(description='Server for several WSGI apps') # Creating a parser
+    parser.add_argument("-p", metavar="-p", type=int, nargs="?", default=-1,
+            help="Choose the port you would like to run on")
+    parser.add_argument("-A", metavar="-A", type=str, nargs=1, 
+            help="the app to run (image, altdemo, or myapp)")
 
-    parser = argparse.ArgumentParser() # Creating a parser
-    parser.add_argument("-A", choices=['image', 'altdemo', 'myapp'],
-            help='Choose which app you would like to run')
-    parser.add_argument("-p", type=int, help="Choose the port you would like to run on")
     args = parser.parse_args()
 
-    # Check to see if a port is specified
-    if args.p == None:
-        port = random.randint(8000, 9999) # Creating WSGI app
-        s.bind((host, port))
-    else:
-        port = args.p
-        s.bind((host, port))
-    if args.A == 'myapp':
-        wsgi_app = make_app()
-    elif args.A == 'image':
-        imageapp.setup()
-        p = imageapp.create_publisher()
-        wsgi_app = quixote.get_wsgi_app()
-    elif args.A == 'altdemo':
-        p = create_publisher()
-        wsgi_app = quixote.get_wsgi_app()
-    else:
-        wsgi_app = make_app()  # In the event that no argument is passed just make my_app
+    try:
+        appname = args.A[0]
+    except TypeError:
+        appname = "INVALIDAPP"
+
+    validApps = ['myapp', 'image', 'altdemo', 'quotes', 'chat']
+    if appname not in validApps:
+        raise Exception("Invalid application name.")
+
+    s = socket.socket()  # Create a socket object
+    host = socket.getfqdn() # Get local machine name
+    port = args.p
+
+    if port < 8000 or port > 9999:
+        port = random.randint(8000, 9999)
+
+    s.bind((host, port))  # Bind to the port
 
     print "Starting server on", host, port
     print "The Web server URL for this would be http://%s:%d/" % (host, port)
@@ -49,87 +55,121 @@ def main():
     while True:
         # Establish connection with client
         c, (client_host, client_port) = s.accept()
-        print 'Got connection from', client_host, client_port
-        handle_connection(c, wsgi_app)
+        print 'Got connection from', client_host, client_port, '\n'
+        handle_connection(c, host, port, appname)
 
 # Handles the connection
-def handle_connection(conn, wsgi_app):
-    # Read in request until end of header
-    request = ''
-    while '\r\n\r\n' not in request:
-        request += conn.recv(1)
+def handle_connection(conn, host, port, appname):
+    environ = {}
+    request = conn.recv(1)
 
-    # Avoid indexing error - make sure there is request
-    if not request:
-        conn.close()
-        return
-    
-    # Creates headers dictionary
+    # Getting the headers
+    while request[-4:] != '\r\n\r\n':
+        new = conn.recv(1)
+        if new == '':
+            return
+        else:
+            request += new
+
+    request, data = request.split('\r\n', 1)
     headers = {}
-    for header in request.splitlines()[1:]:
-        try:
-            k, v = header.split(': ', 1)
-        except:
-            continue
-        headers[k.lower()] = v
+    for line in data.split('\r\n')[:-2]:
+        key, val = line.split(': ', 1)
+        headers[key.lower()] = val
 
-    # Read in rest of request to obtain message
-    message = ''
-    if 'content-length' in headers:
-        while len(message) < int(headers['content-length']):
-            message += conn.recv(1)
+    first_line_of_request_split = request.split('\r\n')[0].split(' ')
+
+    # Path is the second element in the first line of the request
+    http_method = first_line_of_request_split[0]
+    environ['REQUEST_METHOD'] = first_line_of_request_split[0]
+
+    try:
+        parsed_url = urlparse.urlparse(first_line_of_request_split[1])
+        environ['PATH-INFO'] = parsed_url[2]
+        env['QUERY_STRING'] = parsed_url[4]
+    except:
+        pass
 
     # Creates environ dictionary
-    environ = {}
-    environ['REQUEST_METHOD'] = request.splitlines()[0].split(' ')[0]
-    url = urlparse.urlparse(request.splitlines()[0].split(' ')[1])
-    environ['PATH_INFO'] = url.path
-    environ['QUERY_STRING'] = url.query
-    environ['CONTENT_TYPE'] = headers.get('content-type', '')
-    environ['CONTENT_LENGTH'] = headers.get('content-length', '')
-    environ['wsgi.input'] = StringIO.StringIO(message)
-    # Used by quixote apps
+    urlInfo = urlparse.urlparse(request.split(' ', 3)[1])
+    environ['REQUEST_METHOD'] = 'GET'
+    environ['PATH_INFO'] = urlInfo[2]
+    environ['QUERY_STRING'] = urlInfo[4]
+    environ['CONTENT_TYPE'] = 'text/html'
+    environ['CONTENT_LENGTH'] = str(0)
     environ['SCRIPT_NAME'] = ''
-    # Used to pass WSGI validation
-    environ['SERVER_NAME'] = 'My Server'
-    environ['SERVER_PORT'] = 'My Port'
+    environ['SERVER_NAME'] = socket.getfqdn()
+    environ['SERVER_PORT'] = str(port)
     environ['wsgi.version'] = (1, 0)
     environ['wsgi.errors'] = sys.stderr
     environ['wsgi.multithread'] = False
-    environ['wsgi.multiprocess'] = True
-    environ['wsgi.run_once'] = True
+    environ['wsgi.multiprocess'] = False
+    environ['wsgi.run_once'] = False
     environ['wsgi.url_scheme'] = 'http'
     # Used to handle cookies.
-    environ['HTTP_COOKIE'] = headers.get('cookie', '')
-
-    # Declares variables in dictionary so they can be changed by start_response.
-    # Python 2.x doesn't support nonlocal keyword.
-    local = {'response' : '', 'started' : False}
+    environ['HTTP_COOKIE'] = headers['cookie'] if 'cookie' in headers.keys() else ''
 
     # Defines start_response function
     def start_response(status, response_headers):
-        local['started'] = True
+        conn.send('HTTP/1.0 ')
+        conn.send(status)
+        conn.send('\r\n')
+        for pair in response_headers:
+            key, header = pair
+            conn.send(key + ': ' + header + '\r\n')
+        conn.send('\r\n')
 
-        # Restarts response every time function is called
-        local['response'] = ''
+    content = ''
+    if request.startswith('POST '):
+        environ['REQUEST_METHOD'] = 'POST'
+        environ['CONTENT_LENGTH'] = str(headers['content-length'])
+        try:
+            environ['CONTENT_TYPE'] = headers['content-type']
+        except:
+            pass
 
-        # Appends status line and headers
-        local['response'] += 'HTTP/1.0 {0}\r\n'.format(status)
-        for header in response_headers:
-            local['response'] += '{0}: {1}\r\n'.format(header[0], header[1])
-        local['response'] += '\r\n' 
+        cLen = int(headers['content-length'])
+        while len(content) < cLen:
+            content += conn.recv(1)
 
-        return
+    environ['wsgi.input'] = StringIO(content)
 
-    # Gets content of response from call to WSGI app
-    for response in wsgi_app(environ, start_response):
-        local['response'] += response
+    # Creating the appropriate wsgi app based on command line parameter
+    if appname == "image":
+        try:
+            p = imageapp.create_publisher()
+            imageapp.setup()
+        except RuntimeError:
+            pass
 
-    # Send response.
-    if local['started']:
-        conn.send(local['response'])
+        wsgi_app = quixote.get_wsgi_app()
+
+    elif appname == "myapp":
+        wsgi_app = app.make_app()
+
+    elif appname == "altdemo":
+        try:
+            p = quixote.demo.altdemo.create_publisher()
+        except RuntimeError:
+            pass
+
+        wsgi_app = quixote.get_wsgi_app()
+
+    elif appname == "quotes":
+        directory_path = './quotes/'
+        wsgi_app = quotes.create_quotes_app(directory_path + 'quotes.txt', directory_path + 'html')
+
+    elif appname == "chat":
+        wsgi_app = chat.create_chat_app('./chat/html')
+
+    result = wsgi_app(environ, start_response)
+    try:
+        for response in result:
+            conn.send(response)
+    finally:
+        if hasattr(result, 'close'):
+            result.close()
     conn.close()
-    return
 
 if __name__ == '__main__':
     main()
